[package]
name = "my_sandbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "my_sandbox"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
toml = "0.8"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["sched", "mount", "fs", "hostname"] }
libc = "0.2"
